// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        active={true}
        className="s1b5fu8y-0-LinkButton-fjdEfS kHYXie NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={true}
        className="s1b5fu8y-0-LinkButton-fjdEfS kHYXie NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={false}
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
    <li>
      <a
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={false}
        className="s1b5fu8y-0-LinkButton-fjdEfS jgBaSQ NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={true}
        className="s1b5fu8y-0-LinkButton-fjdEfS kHYXie NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
  </ul>
</div>
`;
